[package]
name = "rox"
version = "1.0.0"
edition = "2021"
authors = ["Mayank Tripathi <ryotsu@kochika.me>"]
description = "Rust implementation of Lox programming language"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ryotsu/rox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"

[features]
default = ["debug_trace_execution", "debug_print_code", "debug_log_gc"]
debug_trace_execution = []
debug_print_code = []
debug_log_gc = []
debug_stress_gc = []
